<resources>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="no_thing_to_show">No thing to show</string>
    <string name="search_here">search here</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_cover">Edit Cover</string>
    <string name="edit_description">Edit Description</string>
    <string name="location">Location</string>
    <!--  CircleMenu  -->
    <string name="vector_path_menu">M3,8 L21,8 21,6 3,6z M3,18 L21,18 21,16 3,16z M3,13 L21,13 21,11 3,11z</string>
    <string name="vector_path_line">M3,13 L21,13 21,11 3,11z M3,13 L21,13 21,11 3,11z M3,12 L21,12 21,12 3,12z</string>
    <string name="vector_path_close">M5,6.41 L17.59,19 19,17.59 6.41,5z M6.41,19 L19,6.41 17.59,5 5,17.59z M12,12 L12,12 12,12 12,12z</string>

    <string name="path_cross">M6.4,6.4 L17.6,17.6 M6.4,17.6 L17.6,6.4</string>
    <string name="path_plus">M6.4,12 L17.6,12 M12,6.4 L12,17.6</string>

    <string name="plus">plus</string>
    <string name="groupPlusCross">groupPlusCross</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_have_an_account"><u>I Have an Account</u></string>
    <string name="i_dont_have_an_account"><u>I don\'t have an Account</u></string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">sign in</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="slide_to_cancel">slide to cancel</string>
    <string name="type_a_message">type a message.....</string>
    <string name="offline">offline</string>
    <string name="edit_phone">Edit Phone</string>
    <string name="upload">upload</string>
    <string name="name">name</string>
    <string name="Ateliers">Ateliers</string>
    <string name="WedddingHells">Weddding Hells</string>
    <string name="MakeupArtist">MakeupArtist</string>
    <string name="weddingPlanner">wedding planner</string>
    <string name="add_ateliers">Add Ateliers</string>
    <string name="add_hells">Add Hells</string>
    <string name="add_makeupartist">Add MakeupArtist</string>
    <string name="add_wedding_planner">Add wedding planner</string>
    <string name="requests">Requests</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="delete_for_everyone">delete for everyone</string>
    <string name="delete_for_me">delete For me</string>
    <string name="copy">copy</string>
    <string name="text_copied">text copied</string>
    <string name="download">download</string>
    <string name="empty_text_chat_list">Your chats appear here\nStart chatting by selecting a user. \n eslamghazy600@gmail.com \n@eslam \n#ghazy</string>
    <string name="reaction">reaction</string>
    <string name="google_maps_key">AIzaSyBggOmu97oTfRLX47yWczfcI-y2mWt_YE4</string>
    <!-- CircleMenu   -->
    <bool name="is_right_to_left">false</bool>

</resources>